@@ -10,15 +10,21 @@ import aptech.project.educhain.data.repositories.accounts.AuthUserRepository;
 import aptech.project.educhain.data.repositories.courses.CourseRepository;
 import aptech.project.educhain.data.repositories.payment.OrderRepository;
 import aptech.project.educhain.domain.dtos.payment.OrderDTO;
+import aptech.project.educhain.endpoint.requests.order.ListOrderByCourseRequest;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Component
-public class GetOrderByCourseUseCase implements Usecase<List<OrderDTO>, Integer> {
+public class GetOrderByCourseUseCase implements Usecase<Page<OrderDTO>, GetOrderCourseParams> {
     @Autowired
     ModelMapper modelMapper;
 
@@ -28,19 +34,24 @@ public class GetOrderByCourseUseCase implements Usecase<List<OrderDTO>, Integer>
     @Autowired
     CourseRepository courseRepository;
     @Override
-    public AppResult<List<OrderDTO>> execute(Integer id) {
+    public AppResult<Page<OrderDTO>> execute(GetOrderCourseParams req) {
         try {
-            Course course = courseRepository.findCourseWithId(id);
-            List<Order> orders = orderRepository.findOrderByCourse(course);
-            List<OrderDTO> orderDTOs = orders.stream().map(order -> {
+            Pageable pageable = PageRequest.of(req.getPage(), req.getSize());
+            Page<Order> ordersPage = orderRepository.findOrdersByCourseIdAndTitleSearch(req.getCourseId(), req.getTitleSearch(), pageable);
+
+            List<OrderDTO> orderDTOs = ordersPage.stream().map(order -> {
                 OrderDTO orderDTO = modelMapper.map(order, OrderDTO.class);
                 orderDTO.setUserId(order.getUser().getId());
                 orderDTO.setCourseId(order.getCourse().getId());
                 return orderDTO;
-            }).toList();
-            return AppResult.successResult(orderDTOs);
+            }).collect(Collectors.toList());
+
+            Page<OrderDTO> orderDTOPage = new PageImpl<>(orderDTOs, pageable, ordersPage.getTotalElements());
+
+            return AppResult.successResult(orderDTOPage);
         } catch (Exception e) {
             return AppResult.failureResult(new Failure("Failed to get orders: " + e.getMessage()));
         }
     }
+
 }
